[tool.poetry]
name = "todocli"
version = "0.1.0"
description = "Personal task tracker"
authors = ["Omar Kohl <omarkohl@posteo.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
